Adding docker file and update index.html

--- a/index.html
+++ b/index.html
@@ -1,2 +1,15 @@
-<h1>This is sample webpage</h1>
-<h3>Congratulations!, you have done it! </h3>
+<!doctype html>
+<html>
+ <body style="backgroud-color:rgb(49, 214, 220);"><center>
+    <head>
+     <title>Docker Project</title>
+    </head>
+    <body>
+     <p>Welcome to my Docker Project!<p>
+        <p>Today's Date and Time is: <span id='date-time'></span><p>
+        <script>
+             var dateAndTime = new Date();
+             document.getElementById('date-time').innerHTML=dateAndTime.toLocaleString();
+        </script>
+        </body>
+</html>
